--- a/config.gradle
+++ b/config.gradle
@@ -40,6 +40,6 @@ ext {
             cardview            :  'com.android.support:cardview-v7:23.1.1',
             percent             :   'com.android.support:percent:25.2.0',
             //十分好用的工具库
-            utils               : "com.blankj:utilcode:1.12.0",
+            utils               : 'com.blankj:utilcode:1.12.0',
     ]
 }
