--- a/config.gradle
+++ b/config.gradle
@@ -30,11 +30,15 @@ ext {
 
             retrofitadapter     :  'com.squareup.retrofit2:adapter-rxjava:2.1.0',
             retrofitconverter   :  'com.squareup.retrofit2:converter-gson:2.1.0',
-            rxjava              :  'io.reactivex:rxjava:1.1.8',
-            rxandroid           :  'io.reactivex:rxandroid:1.2.1',
+            rxjava              :  "io.reactivex.rxjava2:rxjava:2.1.9",
+            rxandroid           :  "io.reactivex.rxjava2:rxandroid:2.0.1",
             retrofit2           :  'com.squareup.retrofit2:retrofit:2.1.0',
+            rxbinding           :  "com.jakewharton.rxbinding2:rxbinding:2.0.0",
             gson                :  'com.google.code.gson:gson:2.6.2',
             ger                 :  'com.orhanobut:logger:1.15',
+            loginterceptor      :  'com.parkingwang:okhttp3-loginterceptor:latest.integration',
+            interceptor         :  'com.squareup.okhttp3:logging-interceptor:3.1.2',
+
 
             recyclerview        :  'com.android.support:recyclerview-v7:23.1.1',
             cardview            :  'com.android.support:cardview-v7:23.1.1',
