--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 //在这里引入config.gradle
 apply from: "config.gradle"
 buildscript {
+    ext.kotlin_version = '1.2.41'
     repositories {
         jcenter()
         google()
@@ -12,6 +13,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.mob.sdk:MobSDK:+'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,8 +22,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
         maven { url "https://maven.google.com" }
-        maven { url 'https://jitpack.io' }//添加jitpack仓库地址
+        maven { url "https://jitpack.io" }//添加jitpack仓库地址
         maven {
             url "http://mvn.mob.com/android"
         }
