--- a/config.gradle
+++ b/config.gradle
@@ -28,10 +28,11 @@ ext {
             banner            :  'com.youth.banner:banner:1.4.10',
             zxing             :  'com.google.zxing:core:3.3.0',
 
-            retrofitadapter     :  'com.squareup.retrofit2:adapter-rxjava:2.1.0',
-            retrofitconverter   :  'com.squareup.retrofit2:converter-gson:2.1.0',
-            rxjava              :  "io.reactivex.rxjava2:rxjava:2.1.9",
-            rxandroid           :  "io.reactivex.rxjava2:rxandroid:2.0.1",
+
+            retrofitadapter     :  'com.squareup.retrofit2:adapter-rxjava2:2.3.0',
+            retrofitconverter   :  'com.squareup.retrofit2:converter-gson:2.3.0',
+            rxjava              :  'io.reactivex.rxjava2:rxjava:2.1.0',
+            rxandroid           :  'io.reactivex.rxjava2:rxandroid:2.0.1',
             retrofit2           :  'com.squareup.retrofit2:retrofit:2.1.0',
             rxbinding           :  "com.jakewharton.rxbinding2:rxbinding:2.0.0",
             gson                :  'com.google.code.gson:gson:2.6.2',
@@ -45,5 +46,7 @@ ext {
             percent             :   'com.android.support:percent:25.2.0',
             //十分好用的工具库
             utils               : 'com.blankj:utilcode:1.12.0',
+            photoview           : 'com.github.chrisbanes:PhotoView:2.0.0',
+            multidex            : 'com.android.support:multidex:1.0.0',
     ]
 }
