修复首页滑动卡顿问题,点击条目进入webview返回App崩溃问题

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ allprojects {
         maven { url "https://maven.google.com" }
         maven { url "https://jitpack.io" }//添加jitpack仓库地址
         maven {
+            url "http://maven.aliyun.com/nexus/content/repositories/releases"
+        }
+        maven {
             url "http://mvn.mob.com/android"
         }
     }
