--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,7 @@ dependencies {
     implementation librarys.interceptor
     implementation librarys.photoview
     implementation librarys.multidex
+    implementation librarys.hotfix
     implementation 'com.android.support:multidex:+'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
