--- a/config.gradle
+++ b/config.gradle
@@ -2,11 +2,11 @@ ext {
     android = [
             compileSdkVersion : 26,
             buildToolsVersion : "26+",
-            minSdkVersion    : 19,
-            targetSdkVersion : 22,
-            versionCode      : 1,
-            versionName      : "1.0",
-            STORE_FILE        : "./myapp.jks",
+            minSdkVersion     : 19,
+            targetSdkVersion  : 22,
+            versionCode       : 1,
+            versionName       : "1.0",
+            STORE_FILE        : "./app.jks",
             STORE_PASSWORD    : "123456",
             KEY_ALIAS         : "key0",
             KEY_PASSWORD      : "123456"
@@ -14,19 +14,19 @@ ext {
 
     //supportLibraries dependencies
     supportDependencies = [
-            supportAppcompat  :  'com.android.support:appcompat-v7:27.+',
-            supportDesign     :  'com.android.support:design:27.+',
-            butterknife       :  'com.jakewharton:butterknife:8.8.1',
-            eventbus          :  'org.greenrobot:eventbus:3.0.0',
-            BottomBarLayout   :  'com.github.chaychan:BottomBarLayout:1.0.8',
-            discretescrollview  : 'com.yarolegovich:discrete-scrollview:1.4.4@aar',
-            baserecycleradapter : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.35',
-            glide             :  'com.github.bumptech.glide:glide:3.7.0',
-            cardview          :  'com.android.support:cardview-v7:27.1.0',
-            transformations   :  'jp.wasabeef:glide-transformations:2.0.2',
-            rxpermissions     :  'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5',
-            banner            :  'com.youth.banner:banner:1.4.10',
-            zxing             :  'com.google.zxing:core:3.3.0',
+            supportAppcompat    :  'com.android.support:appcompat-v7:27.+',
+            supportDesign       :  'com.android.support:design:27.+',
+            butterknife         :  'com.jakewharton:butterknife:8.8.1',
+            eventbus            :  'org.greenrobot:eventbus:3.0.0',
+            BottomBarLayout     :  'com.github.chaychan:BottomBarLayout:1.0.8',
+            discretescrollview  :  'com.yarolegovich:discrete-scrollview:1.4.4@aar',
+            baserecycleradapter :  'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.35',
+            glide               :  'com.github.bumptech.glide:glide:3.8.0',
+            cardview            :  'com.android.support:cardview-v7:27.1.0',
+            transformations     :  'jp.wasabeef:glide-transformations:2.0.2',
+            rxpermissions       :  'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5',
+            banner              :  'com.youth.banner:banner:1.4.10',
+            zxing               :  'com.google.zxing:core:3.3.0',
 
 
             retrofitadapter     :  'com.squareup.retrofit2:adapter-rxjava2:2.3.0',
@@ -43,10 +43,12 @@ ext {
 
             recyclerview        :  'com.android.support:recyclerview-v7:23.1.1',
             cardview            :  'com.android.support:cardview-v7:23.1.1',
-            percent             :   'com.android.support:percent:25.2.0',
+            percent             :  'com.android.support:percent:25.2.0',
             //十分好用的工具库
-            utils               : 'com.blankj:utilcode:1.12.0',
-            photoview           : 'com.github.chrisbanes:PhotoView:2.0.0',
-            multidex            : 'com.android.support:multidex:1.0.0',
+            utils               :  'com.blankj:utilcode:1.12.0',
+            photoview           :  'com.github.chrisbanes:PhotoView:2.0.0',
+            multidex            :  'com.android.support:multidex:1.0.0',
+
+            hotfix              : 'com.aliyun.ams:alicloud-android-hotfix:3.2.3',
     ]
 }
