--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,8 @@ dependencies {
     implementation librarys.photoview
     implementation librarys.multidex
     implementation librarys.hotfix
+    implementation librarys.SmartRefreshLayout
+    implementation librarys.SmartRefreshHeader
     implementation 'com.android.support:multidex:+'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
