--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@
 //在这里引入config.gradle
 apply from: "config.gradle"
 buildscript {
-    ext.kotlin_version = '1.2.41'
     repositories {
         jcenter()
         google()
@@ -13,9 +12,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.mob.sdk:MobSDK:+'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath "io.objectbox:objectbox-gradle-plugin:1.5.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
