添加友盟分享,混淆

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ android {
     }
     buildTypes {
         release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -114,5 +118,9 @@ dependencies {
     implementation project(':clocklibrary')
     implementation 'com.github.DingMouRen:LayoutManagerGroup:f68c9712e5'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation files('libs/umeng-share-QQ-simplify-6.9.2.jar')
+    implementation files('libs/umeng-share-wechat-simplify-6.9.2.jar')
+    implementation files('libs/umeng-sharetool-6.9.2.jar')
+    implementation files('libs/umeng-common-1.5.3.jar')
 }
 
