添加友盟分享,混淆

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,20 @@ android {
     buildTypes {
         release {
             minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            //是否zip优化
+            zipAlignEnabled true
+            //删除一些无用资源
+            shrinkResources false
         }
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            //是否zip优化
+            zipAlignEnabled true
+            //删除一些无用资源
+            shrinkResources false
         }
     }
 
@@ -118,8 +127,6 @@ dependencies {
     implementation project(':clocklibrary')
     implementation 'com.github.DingMouRen:LayoutManagerGroup:f68c9712e5'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation files('libs/umeng-share-QQ-simplify-6.9.2.jar')
-    implementation files('libs/umeng-share-wechat-simplify-6.9.2.jar')
     implementation files('libs/umeng-sharetool-6.9.2.jar')
     implementation files('libs/umeng-common-1.5.3.jar')
 }
