--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,6 +94,9 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name=".ui.AddViewActivity"/>
+        <activity android:name=".ui.mine.ThreeLoginActivity"/>
+        <activity android:name="com.tencent.tauth.AuthActivity"/>
+        <activity android:name="com.tencent.connect.common.AssistActivity"/>
 
     </application>
 
